--- a/workshop/exercise-3/style.css
+++ b/workshop/exercise-3/style.css
@@ -1,1 +1,17 @@
-/* ...crickets... */
+.title {
+    text-align: center;
+}
+
+.subtitle {
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.content {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+}
+
+.emph {
+    font-style: italic;
+}
