--- a/workshop/exercise-4/style.css
+++ b/workshop/exercise-4/style.css
@@ -1,12 +1,12 @@
-#centered {
+.centered {
   text-align: center;
 }
 
-.title {
+#title {
   font-size: 3rem;
 }
 
-subtitle {
+#subtitle {
   font-size: 1.5rem;
 }
 
@@ -23,7 +23,7 @@ subtitle {
   background: grey;
 }
 
-monospaced {
+.monospaced {
   font-family: monospace;
 }
 
@@ -32,4 +32,8 @@ p,
 h2 {
   background: grey;
   margin: 0;
+}
+
+#first-element, #second-element {
+  list-style-type: none;
 }
