--- a/workshop/exercise-7/style.css
+++ b/workshop/exercise-7/style.css
@@ -17,3 +17,54 @@ li {
 }
 
 /* ADD CSS BELOW */
+
+body {
+  margin: 30px;
+}
+
+
+
+li{
+  list-style-type: none;
+}
+
+.image {
+  height: 150px;
+  border-radius: 5px;
+  max-width: 100%;
+}
+
+.title {
+  font-size: 3.5em;
+  text-align: center;
+}
+
+.subtitles {
+  font-size: 2em;
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+.animal-category {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.row-cute-animals {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.col-cute-animals {
+  background-color: lightgrey;
+  padding: 15px;
+  border: dashed 2px black;
+  margin: 10px;
+}
+
+.col-cute-animals.biggest {
+  flex: 1 0 0;
+}
